cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

# ==============================================================================

# UdpDemultiplexerTests

# add_boost_test(
#     TARGET UdpDemultiplexerTests

#     INCLUDES
#         UdpDemultiplexerTestWrapper.hpp
#         ../common/TestSupport.hpp

#     SOURCES
#         UdpDemultiplexerTestWrapper.cpp
#         UdpDemultiplexerTests.cpp
#         ../common/TestSupport.cpp
# )

# if (NOT WIN32)
# 	target_link_libraries(UdpDemultiplexerTests PRIVATE rt)
# endif()

# ==============================================================================
